Remove compiler warnings a sysouts in unit tests
Signed-off-by: Andy McCright <j.andrew.mccright@gmail.com>